RESOLVED FIXED157446
Web Inspector: Inspect Element and Element Selection searching should work with Shadow DOM Nodes
https://bugs.webkit.org/show_bug.cgi?id=157446
Summary Web Inspector: Inspect Element and Element Selection searching should work wi...
Joseph Pecoraro
Reported 2016-05-06 21:22:35 PDT
* SUMMARY Inspect Element searching and selection should work with Shadow DOM Nodes. * STEPS TO REPRODUCE 1. Open a page with Shadow DOM Nodes 2. Right Click and Inspect Element => Expected inner shadow element to be selected in Web Inspector DOM Tree, it is not 3. Enable Node Selection mode from inspector 4. Hover elements in a Shadow DOM => Expected inner shadow elements to be highlighted, they are not 5. Click to select an element in a Shadow DOM => Expected inner shadow element to be selected in Web Inspector DOM Tree, it is not
Attachments
[PATCH] Proposed Fix (6.31 KB, patch)
2016-05-06 21:35 PDT, Joseph Pecoraro
rniwa: review+
joepeck: commit-queue-
Joseph Pecoraro
Comment 1 2016-05-06 21:22:45 PDT
Joseph Pecoraro
Comment 2 2016-05-06 21:35:15 PDT
Created attachment 278314 [details] [PATCH] Proposed Fix
Ryosuke Niwa
Comment 3 2016-05-06 21:41:23 PDT
Comment on attachment 278314 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=278314&action=review > Source/WebCore/rendering/HitTestResult.cpp:135 > void HitTestResult::setToNonShadowAncestor() Please rename this to moveInnerNodeOutOfUserAgentShadowTree or something so that the semantics is clear.
Joseph Pecoraro
Comment 4 2016-05-06 22:46:41 PDT
> Please rename this to moveInnerNodeOutOfUserAgentShadowTree or something so > that the semantics is clear. Renaming will be handled by Bug 157447.
Joseph Pecoraro
Comment 5 2016-05-06 22:51:37 PDT
Note You need to log in before you can comment on or make changes to this bug.